// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HexEncodedData should not cut the text in case the limit option is higher than the provided hexData 1`] = `
<div>
  <div
    class="flex flex-wrap gap-2 xl:flex-nowrap"
  >
    <div
      class="break-words min-w-[100px] basis-auto lg:basis-[170px] xl:basis-1/4 xl:flex-nowrap"
      data-testid="tx-row-title"
    >
      <span
        class="m-0 text-sm leading-5 font-normal text-[var(--color-primary-light)]"
        data-slot="typography"
        data-variant="paragraph-small"
      >
        Data (hex-encoded)
      </span>
    </div>
    <div
      class="flex-1"
      data-testid="tx-data-row"
    >
      <div
        class="encodedData"
        data-testid="tx-hexData"
      >
        <span
          class="inline-flex cursor-pointer"
          data-slot="tooltip-trigger"
          id="base-ui-_r_b_"
        >
          <span
            class="monospace"
          >
            <b
              data-slot="tooltip-trigger"
              id="base-ui-_r_d_"
            >
              0xed2ad31e
            </b>
            d00088fc64d00c49774b2fe3fb7fd7db1c2a714700892607b9f77dc1
             
          </span>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`HexEncodedData should not highlight the data if highlight option is false 1`] = `
<div>
  <div
    class="flex flex-wrap gap-2 xl:flex-nowrap"
  >
    <div
      class="break-words min-w-[100px] basis-auto lg:basis-[170px] xl:basis-1/4 xl:flex-nowrap"
      data-testid="tx-row-title"
    >
      <span
        class="m-0 text-sm leading-5 font-normal text-[var(--color-primary-light)]"
        data-slot="typography"
        data-variant="paragraph-small"
      >
        Some arbitrary data
      </span>
    </div>
    <div
      class="flex-1"
      data-testid="tx-data-row"
    >
      <div
        class="encodedData"
        data-testid="tx-hexData"
      >
        <span
          class="inline-flex cursor-pointer"
          data-slot="tooltip-trigger"
          id="base-ui-_r_9_"
        >
          <span
            class="monospace"
          >
            0x102384763718984309876
             
          </span>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`HexEncodedData should render the default component markup 1`] = `
<div>
  <div
    class="flex flex-wrap gap-2 xl:flex-nowrap"
  >
    <div
      class="break-words min-w-[100px] basis-auto lg:basis-[170px] xl:basis-1/4 xl:flex-nowrap"
      data-testid="tx-row-title"
    >
      <span
        class="m-0 text-sm leading-5 font-normal text-[var(--color-primary-light)]"
        data-slot="typography"
        data-variant="paragraph-small"
      >
        Data (hex-encoded)
      </span>
    </div>
    <div
      class="flex-1"
      data-testid="tx-data-row"
    >
      <div
        class="encodedData"
        data-testid="tx-hexData"
      >
        <span
          class="inline-flex cursor-pointer"
          data-popup-open=""
          data-slot="tooltip-trigger"
          id="base-ui-_r_1_"
        >
          <span
            class="monospace"
          >
            <b
              data-popup-open=""
              data-slot="tooltip-trigger"
              id="base-ui-_r_3_"
            >
              0xed2ad31e
            </b>
            d00088fc64…
             
          </span>
        </span>
        <button
          class="underline-offset-4 transition-colors hover:underline outline-none rounded-xs focus-visible:ring-ring/50 focus-visible:ring-[3px] [&>svg]:inline [&>svg]:size-4 text-primary underline decoration-primary/40 hover:decoration-current showMore"
          data-slot="link"
          data-testid="show-more"
          data-variant="default"
          type="button"
        >
          Show more
        </button>
      </div>
    </div>
  </div>
</div>
`;
